# AndroidNativeGuard

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/id/kuro/androidnativeguard/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/Modules/: IModule.h
app/src/main/cpp/Modules/AntiDebug/: AntiDebug.cpp  AntiDebug.h
app/src/main/cpp/Modules/AntiDump/: AntiDump.cpp  AntiDump.h
app/src/main/cpp/Modules/AntiLibPatch/: AntiLibPatch.cpp  AntiLibPatch.h
app/src/main/cpp/Modules/FridaDetect/: FridaDetect.cpp  FridaDetect.h
app/src/main/cpp/Modules/RiGisk/: RiGisk.cpp  RiGisk.h
app/src/main/cpp/Modules/RootDetect/: RootDetect.cpp  RootDetect.h
app/src/main/cpp/SecureAPI/: SecureAPI.cpp  SecureAPI.h
app/src/main/cpp/Utils/: ElfImg.cpp  ElfImg.h  Log.h  Utils.cpp  Utils.h  obfuscate.h
app/src/main/java/id/kuro/androidnativeguard/: MainActivity.java
app/src/main/res/drawable/: border_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/id/kuro/androidnativeguard/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
